<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.contentproviderexample.DetailActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/employee_list"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eId"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/emp_id"/>

        <TextView
            android:id="@+id/eName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_height="match_parent"
            android:text="@string/emp_name"/>

        <TextView
            android:id="@+id/eNu"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_height="match_parent"
            android:text="@string/emp_number"/>

        <TextView
            android:id="@+id/eDel"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:layout_height="match_parent"
           />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/empListRv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        />

</LinearLayout>
